--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "express-session": "^1.18.2",
+    "firebase-admin": "^13.5.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   }
